[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "network-incident-response-bench"
version = "0.1.0"
description = "A Network Incident Response environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mock_network_env*"]